--- a/.github/workflows/my_data_factory.yml
+++ b/.github/workflows/my_data_factory.yml
@@ -32,7 +32,7 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           
-          git add my_stock_data/*.json
+          git add my_stock_data/*.json metadata.json
           
           if git diff --staged --quiet; then
             echo "No changes detected."
