Add debug steps and force git add

--- a/.github/workflows/my_data_factory.yml
+++ b/.github/workflows/my_data_factory.yml
@@ -27,12 +27,26 @@ jobs:
       - name: Run Downloader
         run: python my_downloader.py
 
+      - name: Debug - List Files
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Files in root:"
+          ls -la
+          echo "Files in my_stock_data:"
+          ls -la my_stock_data/ || echo "Directory not found"
+
       - name: Commit and Push Data
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           
-          git add my_stock_data/*.json metadata.json
+          # 強制添加，不管有沒有變更
+          git add -f my_stock_data/*.json
+          git add -f metadata.json
+          
+          # 顯示狀態，確認 git 抓到了什麼
+          git status
           
           if git diff --staged --quiet; then
             echo "No changes detected."
